RESOLVED FIXED137895
REGRESSION: Google Search (mobile) video thumbnails are too large.
https://bugs.webkit.org/show_bug.cgi?id=137895
Summary REGRESSION: Google Search (mobile) video thumbnails are too large.
alan
Reported 2014-10-20 14:30:38 PDT
1. Open google.com with iOS user agent string. 1. Search for something with videos. 3. Tap the "videos". Notice that the video thumbnail overlay the title/text.
Attachments
Patch (11.19 KB, patch)
2014-10-20 17:51 PDT, alan
no flags
Patch (11.24 KB, patch)
2014-10-21 08:57 PDT, alan
no flags
alan
Comment 1 2014-10-20 14:31:57 PDT
alan
Comment 2 2014-10-20 17:51:31 PDT
Simon Fraser (smfr)
Comment 3 2014-10-20 17:54:09 PDT
Comment on attachment 240167 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=240167&action=review > Source/WebCore/rendering/RenderLayer.h:101 > + bool effectedByRadius() const { return m_effectedByRadius; } > + void setEffectedByRadius(bool effectedByRadius) { m_effectedByRadius = effectedByRadius; } effected -> affected everywhere.
alan
Comment 4 2014-10-21 08:57:23 PDT
WebKit Commit Bot
Comment 5 2014-10-21 10:32:12 PDT
Comment on attachment 240207 [details] Patch Clearing flags on attachment: 240207 Committed r174986: <http://trac.webkit.org/changeset/174986>
WebKit Commit Bot
Comment 6 2014-10-21 10:32:16 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 7 2014-11-12 21:30:30 PST
This broke css "clip".
Note You need to log in before you can comment on or make changes to this bug.