Source/WebCore/rendering/RenderLayer.h
@@ -84,30 +84,32 @@ enum RepaintStatus {
 class ClipRect {
 public:
     ClipRect()
-    : m_hasRadius(false)
-    { }
+        : m_affectedByRadius(false)
+    {
+    }
     
     ClipRect(const LayoutRect& rect)
-    : m_rect(rect)
-    , m_hasRadius(false)
-    { }
+        : m_rect(rect)
+        , m_affectedByRadius(false)
+    {
+    }
     
     const LayoutRect& rect() const { return m_rect; }
     void setRect(const LayoutRect& rect) { m_rect = rect; }
 
-    bool hasRadius() const { return m_hasRadius; }
-    void setHasRadius(bool hasRadius) { m_hasRadius = hasRadius; }
+    bool affectedByRadius() const { return m_affectedByRadius; }
+    void setAffectedByRadius(bool affectedByRadius) { m_affectedByRadius = affectedByRadius; }
 
-    bool operator==(const ClipRect& other) const { return rect() == other.rect() && hasRadius() == other.hasRadius(); }
-    bool operator!=(const ClipRect& other) const { return rect() != other.rect() || hasRadius() != other.hasRadius(); }
+    bool operator==(const ClipRect& other) const { return rect() == other.rect() && affectedByRadius() == other.affectedByRadius(); }
+    bool operator!=(const ClipRect& other) const { return rect() != other.rect() || affectedByRadius() != other.affectedByRadius(); }
     bool operator!=(const LayoutRect& otherRect) const { return rect() != otherRect; }
 
     void intersect(const LayoutRect& other) { m_rect.intersect(other); }
     void intersect(const ClipRect& other)
     {
         m_rect.intersect(other.rect());
-        if (other.hasRadius())
-            m_hasRadius = true;
+        if (other.affectedByRadius())
+            m_affectedByRadius = true;
     }
     void move(LayoutUnit x, LayoutUnit y) { m_rect.move(x, y); }
     void move(const LayoutSize& size) { m_rect.move(size); }
@@ -123,7 +125,7 @@ public:
 
 private:
     LayoutRect m_rect;
-    bool m_hasRadius;
+    bool m_affectedByRadius;
 };
 
 inline ClipRect intersection(const ClipRect& a, const ClipRect& b)
